@@ -1,5 +1,6 @@
 [0.9.22]
 - Added output field full_sseq to tabular output format.
+- Database sequences that exceed the maximum accession length will no longer cause an error.
 
 [0.9.21]
 - Fixed compiler errors on some systems.
